Minor bugs fixed

--- a/app/src/main/res/drawable/ok_button_pressed.xml
+++ b/app/src/main/res/drawable/ok_button_pressed.xml
@@ -7,7 +7,7 @@
         android:bottomRightRadius="0dp"
         />
     <solid
-        android:color="#1EE80C"
+        android:color="#FF9800"
         />
     <padding
         android:left="0dp"
