--- a/app/src/main/res/layout/activity_statistic_chose_period.xml
+++ b/app/src/main/res/layout/activity_statistic_chose_period.xml
@@ -7,7 +7,7 @@
     android:paddingLeft="0sp"
     android:paddingRight="0sp"
     android:paddingTop="0sp"
-    tools:context="com.example.newcosts.StatisticChosePeriodActivity">
+    tools:context="com.touristskaya.expenses.StatisticChosePeriodActivity">
 
     <LinearLayout
         android:orientation="vertical"
