--- a/app/src/main/res/layout/datepicker.xml
+++ b/app/src/main/res/layout/datepicker.xml
@@ -13,14 +13,15 @@
 
         <TextView
             android:text="TextView"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:background="#FF9800"
             android:textSize="18sp"
             android:textColor="#FFFFFF"
             android:id="@+id/calendar_chosenYear"
-            android:layout_marginLeft="10dp" />
+            android:layout_marginLeft="10dp"
+            android:layout_marginStart="10dp"/>
     </LinearLayout>
 
     <LinearLayout
@@ -31,14 +32,15 @@
 
         <TextView
             android:text="TextView"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:background="#FF9800"
             android:textSize="30sp"
             android:textColor="#FFFFFF"
             android:id="@+id/calendar_chosenDayMonth"
-            android:layout_marginLeft="10dp" />
+            android:layout_marginLeft="10dp"
+            android:layout_marginStart="10dp"/>
     </LinearLayout>
 
     <LinearLayout
@@ -67,6 +69,7 @@
                 android:layout_weight="1"
                 android:text="+"
                 android:background="@drawable/calendar_buttons_style"
+                style="@style/Widget.AppCompat.Button.Borderless"
                 android:textColor="@drawable/calendar_button_text_color"
                 android:textSize="24sp" />
 
@@ -87,6 +90,7 @@
                 android:layout_weight="1"
                 android:text="-"
                 android:background="@drawable/calendar_buttons_style"
+                style="@style/Widget.AppCompat.Button.Borderless"
                 android:textColor="@drawable/calendar_button_text_color"
                 android:textSize="24sp" />
         </LinearLayout>
@@ -102,6 +106,7 @@
                 android:id="@+id/calendar_monthUp"
                 android:text="+"
                 android:background="@drawable/calendar_buttons_style"
+                style="@style/Widget.AppCompat.Button.Borderless"
                 android:textColor="@drawable/calendar_button_text_color"
                 android:textSize="24sp" />
 
@@ -114,11 +119,12 @@
 
             <Button
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="0dp"
                 android:id="@+id/calendar_monthDown"
                 android:layout_weight="1"
                 android:text="-"
                 android:background="@drawable/calendar_buttons_style"
+                style="@style/Widget.AppCompat.Button.Borderless"
                 android:textColor="@drawable/calendar_button_text_color"
                 android:textSize="24sp" />
         </LinearLayout>
@@ -134,6 +140,7 @@
                 android:id="@+id/calendar_yearUp"
                 android:text="+"
                 android:background="@drawable/calendar_buttons_style"
+                style="@style/Widget.AppCompat.Button.Borderless"
                 android:textColor="@drawable/calendar_button_text_color"
                 android:textSize="24sp" />
 
@@ -150,6 +157,7 @@
                 android:id="@+id/calendar_yearDown"
                 android:text="-"
                 android:background="@drawable/calendar_buttons_style"
+                style="@style/Widget.AppCompat.Button.Borderless"
                 android:textColor="@drawable/calendar_button_text_color"
                 android:textSize="24sp" />
         </LinearLayout>
@@ -176,6 +184,7 @@
             android:layout_weight="1"
             android:layout_margin="2dp"
             android:background="@drawable/calendar_buttons_style"
+            style="@style/Widget.AppCompat.Button.Borderless"
             android:textColor="@drawable/calendar_button_text_color"/>
 
         <LinearLayout
@@ -192,6 +201,7 @@
             android:layout_weight="1"
             android:layout_margin="2dp"
             android:background="@drawable/calendar_buttons_style"
+            style="@style/Widget.AppCompat.Button.Borderless"
             android:textColor="@drawable/calendar_button_text_color"/>
     </LinearLayout>
 
