--- a/app/src/main/res/layout/activity_edit_costs.xml
+++ b/app/src/main/res/layout/activity_edit_costs.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/activity_edit_costs"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -19,7 +20,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:weightSum="2"
-            android:paddingLeft="2dp">
+            android:paddingLeft="2dp"
+            android:paddingStart="2dp">
 
             <TextView
                 android:text="@string/edit_costs_name"
@@ -45,6 +47,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingLeft="2dp"
+            android:paddingStart="2dp"
             android:weightSum="2">
 
             <TextView
