--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -7,7 +7,8 @@
     android:paddingTop="0sp"
     android:paddingBottom="0sp"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:showIn="@layout/activity_main" tools:context=".MainActivity">
+    tools:showIn="@layout/activity_main" tools:context=".MainActivity"
+    android:id="@+id/activity_main_root_layout">
 
     <LinearLayout
         android:orientation="vertical"
