--- a/app/src/main/res/layout/edit_cost_type_popup.xml
+++ b/app/src/main/res/layout/edit_cost_type_popup.xml
@@ -31,7 +31,7 @@
 
         <LinearLayout
             android:orientation="vertical"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:weightSum="3">
