--- a/app/src/main/res/layout/input_data_popup.xml
+++ b/app/src/main/res/layout/input_data_popup.xml
@@ -16,6 +16,7 @@
             android:layout_height="wrap_content"
             android:textColor="#FFFFFF"
             android:layout_marginLeft="5dp"
+            android:layout_marginStart="5dp"
             android:id="@+id/inputDataPopup_costSum" />
     </LinearLayout>
 
@@ -26,7 +27,7 @@
         android:background="#FF9800">
 
         <TextView
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:text="Промтовары"
@@ -51,7 +52,7 @@
         android:id="@+id/inputDataPopup_note_layout">
 
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:id="@+id/inputDataPopup_note_text_view"
             android:layout_weight="1"
