--- a/app/src/main/res/layout/single_costs_row.xml
+++ b/app/src/main/res/layout/single_costs_row.xml
@@ -8,7 +8,7 @@
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_weight="1"
         android:weightSum="2">
 
@@ -29,7 +29,7 @@
             android:text="Value"
             android:id="@+id/costValue"
             android:layout_weight="1"
-            android:gravity="right"
+            android:gravity="end"
             android:minWidth="100dp"
             android:layout_margin="15dp" />
 
