--- a/app/src/main/res/layout/single_event_row.xml
+++ b/app/src/main/res/layout/single_event_row.xml
@@ -13,7 +13,7 @@
         android:layout_margin="15dp" />
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="Medium Text"
