Input data screen changed

--- a/app/src/main/res/layout/add_new_cost_type_popup.xml
+++ b/app/src/main/res/layout/add_new_cost_type_popup.xml
@@ -46,17 +46,16 @@
             <LinearLayout
                 android:orientation="horizontal"
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
+                android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:weightSum="3">
 
                 <Button
-                    android:layout_width="0dp"
+                    android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:text="Добавить"
                     android:textColor="@drawable/button_text_color"
                     android:id="@+id/addNewCostTypeButton"
-                    android:layout_weight="1"
                     android:background="@drawable/keyboard_buttons_custom" />
 
             </LinearLayout>
@@ -71,7 +70,7 @@
 
             <Button
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
+                android:layout_height="wrap_content"
                 android:text="Отмена"
                 android:textColor="@drawable/button_text_color"
                 android:id="@+id/cancelButton"
