--- a/app/src/main/res/layout/activity_input_data.xml
+++ b/app/src/main/res/layout/activity_input_data.xml
@@ -41,7 +41,8 @@
                 android:layout_alignParentRight="true"
                 android:layout_alignParentEnd="true"
                 android:layout_marginLeft="5dp"
-                android:layout_marginStart="5dp" />
+                android:layout_marginStart="5dp"
+                android:background="@android:color/white" />
 
             <LinearLayout
                 android:orientation="vertical"
@@ -49,9 +50,10 @@
                 android:layout_height="60dp"
                 android:gravity="center_vertical|start|end"
                 android:layout_toRightOf="@+id/activity_input_data_input_value_edittext"
+                android:layout_toEndOf="@+id/activity_input_data_input_value_edittext"
                 android:layout_centerVertical="true"
                 android:background="@color/veryDarkOrange"
-                android:id="@+id/activity_input_data_edit_text_cursor"></LinearLayout>
+                android:id="@+id/activity_input_data_edit_text_cursor"/>
 
             <EditText
                 android:layout_width="wrap_content"
