--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="darkOrange">#FF6D00</color>
     <color name="veryDarkOrange">#FF5722</color>
     <color name="deepOrangeLight">#FFCCBC</color>
+    <color name="deepOrange">#BF360C</color>
 </resources>
