--- a/app/src/main/res/layout/edit_cost_type_popup.xml
+++ b/app/src/main/res/layout/edit_cost_type_popup.xml
@@ -31,9 +31,8 @@
 
         <LinearLayout
             android:orientation="vertical"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="1"
             android:weightSum="3">
 
             <LinearLayout
@@ -90,7 +89,6 @@
         </LinearLayout>
 
     </LinearLayout>
-
 
 
 </LinearLayout>
