--- a/app/src/main/res/layout/activity_statistic_cost_type_detailed.xml
+++ b/app/src/main/res/layout/activity_statistic_cost_type_detailed.xml
@@ -7,7 +7,7 @@
     android:paddingLeft="0sp"
     android:paddingRight="0sp"
     android:paddingTop="0sp"
-    tools:context="com.example.newcosts.StatisticCostTypeDetailedActivity">
+    tools:context=".StatisticCostTypeDetailedActivity">
 
     <LinearLayout
         android:orientation="vertical"
