--- a/app/src/main/res/layout/activity_statistic_main_screen.xml
+++ b/app/src/main/res/layout/activity_statistic_main_screen.xml
@@ -6,8 +6,7 @@
     android:paddingBottom="0sp"
     android:paddingLeft="0sp"
     android:paddingRight="0sp"
-    android:paddingTop="0sp"
-    tools:context="com.example.newcosts.StatisticMainScreenActivity">
+    android:paddingTop="0sp">
 
     <LinearLayout
         android:orientation="vertical"
