--- a/app/src/main/res/layout/fragment_statistic_main_screen.xml
+++ b/app/src/main/res/layout/fragment_statistic_main_screen.xml
@@ -7,7 +7,7 @@
     android:paddingLeft="0sp"
     android:paddingRight="0sp"
     android:paddingTop="0sp"
-    tools:context="com.example.newcosts.StatisticMainScreenActivity">
+    tools:context=".MainActivityWithFragments">
 
     <LinearLayout
         android:orientation="vertical"
