--- a/app/src/main/res/layout/activity_statistic_detailed.xml
+++ b/app/src/main/res/layout/activity_statistic_detailed.xml
@@ -112,7 +112,16 @@
                     android:orientation="vertical"
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
-                    android:background="@android:color/white"></LinearLayout>
+                    android:background="@android:color/white"/>
+
+                <TextView
+                    android:text="45812 руб./день"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/activity_statistic_detailed_per_day_textview"
+                    android:textAppearance="@style/TextAppearance.AppCompat"
+                    android:textColor="@android:color/white"
+                    android:gravity="center" />
             </LinearLayout>
 
         </LinearLayout>
