--- a/app/src/main/res/layout/activity_statistic_expense_type_detailed.xml
+++ b/app/src/main/res/layout/activity_statistic_expense_type_detailed.xml
@@ -114,7 +114,16 @@
                     android:orientation="vertical"
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
-                    android:background="@android:color/white"></LinearLayout>
+                    android:background="@android:color/white"/>
+
+                <TextView
+                    android:text="52147 руб./день"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/activity_statistic_cost_type_detailed_per_day_textview"
+                    android:textAppearance="@style/TextAppearance.AppCompat"
+                    android:textColor="@android:color/white"
+                    android:gravity="center" />
             </LinearLayout>
 
         </LinearLayout>
@@ -131,7 +140,8 @@
             <android.support.v7.widget.RecyclerView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:id="@+id/activity_statistic_cost_type_detailed_recycler_view" />
+                android:id="@+id/activity_statistic_cost_type_detailed_recycler_view"
+                android:paddingBottom="5dp" />
         </LinearLayout>
 
     </LinearLayout>
