--- a/app/src/main/res/layout/fragment_last_entered_values_screen.xml
+++ b/app/src/main/res/layout/fragment_last_entered_values_screen.xml
@@ -12,12 +12,12 @@
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:padding="0dp">
+        android:layout_height="match_parent">
 
         <android.support.v7.widget.RecyclerView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/fragment_last_entered_values_recycler_view" />
+            android:id="@+id/fragment_last_entered_values_recycler_view"
+            android:paddingBottom="5dp" />
     </LinearLayout>
 </RelativeLayout>
