--- a/app/src/main/res/layout/fragment_current_month_screen_single_item.xml
+++ b/app/src/main/res/layout/fragment_current_month_screen_single_item.xml
@@ -15,7 +15,8 @@
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:id="@+id/current_month_single_item_top_layout">
 
         <LinearLayout
             android:orientation="horizontal"
@@ -23,12 +24,13 @@
             android:layout_height="match_parent">
 
             <ImageView
-                android:layout_width="wrap_content"
+                android:layout_width="22dp"
                 android:layout_height="wrap_content"
                 app:srcCompat="@android:drawable/ic_menu_edit"
                 android:id="@+id/current_month_single_item_edit_category_imageview"
-                android:layout_weight="1"
-                android:background="@drawable/activity_input_data_buttons_style" />
+                android:background="@drawable/activity_input_data_buttons_style"
+                android:layout_marginLeft="5dp"
+                android:layout_marginStart="5dp" />
 
             <TextView
                 android:text="Электроника"
