--- a/app/src/main/res/layout/fragment_statistic_main_screen_single_item_v2.xml
+++ b/app/src/main/res/layout/fragment_statistic_main_screen_single_item_v2.xml
@@ -115,7 +115,7 @@
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@android:color/white"
+            android:background="@drawable/fragment_statistic_main_screen_single_item_style"
             android:id="@+id/fragment_statistic_main_screen_layout_with_text">
 
             <LinearLayout
@@ -138,7 +138,8 @@
                     android:textStyle="normal|bold"
                     android:layout_gravity="center_vertical"
                     android:layout_marginEnd="5sp"
-                    android:layout_marginRight="5sp" />
+                    android:layout_marginRight="5sp"
+                    android:textColor="@drawable/button_text_color_black" />
             </LinearLayout>
 
             <LinearLayout
@@ -168,7 +169,7 @@
                         android:layout_marginRight="5sp"
                         android:layout_marginLeft="5sp"
                         android:layout_marginStart="5sp"
-                        android:textColor="@color/darkGrey" />
+                        android:textColor="@drawable/button_text_color_grey" />
                 </LinearLayout>
 
             </LinearLayout>
