--- a/app/src/main/res/layout/activity_main_with_fragments.xml
+++ b/app/src/main/res/layout/activity_main_with_fragments.xml
@@ -7,16 +7,35 @@
     android:layout_height="match_parent"
     tools:context=".ActivityMainWithFragments">
 
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/activity_main_toolbar"
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
+        android:id="@+id/activity_main_toolbar"
         android:background="@color/orange"
-        android:elevation="0dp"
-        android:minHeight="?attr/actionBarSize"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
+        android:paddingBottom="10dp"
+        android:paddingTop="10dp">
+
+        <TextView
+            android:text="Мои расходы"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="@style/TextAppearance.AppCompat"
+            android:textSize="20sp"
+            android:id="@+id/activity_main_toolbar_text_view"
+            android:paddingLeft="10dp"
+            android:paddingStart="10dp"
+            android:paddingRight="10dp"
+            android:paddingEnd="10dp"
+            android:maxLines="1"
+            android:ellipsize="end"
+            android:textColor="@android:color/white"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentLeft="true"/>
+
+    </RelativeLayout>
 
     <android.support.design.widget.TabLayout
         android:id="@+id/activity_main_tab_layout"
