--- a/app/src/main/res/layout/fragment_current_month_screen_single_item.xml
+++ b/app/src/main/res/layout/fragment_current_month_screen_single_item.xml
@@ -5,12 +5,12 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:weightSum="2"
-    android:background="@drawable/bottom_border"
     android:paddingTop="10dp"
     android:paddingLeft="10dp"
     android:paddingRight="10dp"
     android:paddingEnd="10dp"
-    android:paddingStart="10dp">
+    android:paddingStart="10dp"
+    android:background="@drawable/fragment_current_month_screen_single_item_style">
 
     <LinearLayout
         android:orientation="vertical"
@@ -42,7 +42,8 @@
                 android:layout_weight="1"
                 android:layout_marginLeft="20dp"
                 android:layout_marginStart="20dp"
-                android:textStyle="normal|bold" />
+                android:textStyle="normal|bold"
+                android:textColor="@drawable/button_text_color_black" />
         </LinearLayout>
 
         <LinearLayout
@@ -62,7 +63,8 @@
                     android:text="В текущем месяце"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:id="@+id/current_month_single_item_in_current_month_textview" />
+                    android:id="@+id/current_month_single_item_in_current_month_textview"
+                    android:textColor="@drawable/button_text_color_grey" />
 
                 <ImageView
                     android:layout_width="wrap_content"
@@ -75,7 +77,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:id="@+id/current_month_single_item_value_textview"
-                    android:layout_weight="1" />
+                    android:layout_weight="1"
+                    android:textColor="@drawable/button_text_color_grey" />
             </LinearLayout>
 
         </LinearLayout>
