--- a/app/src/main/res/layout/fragment_last_entered_values_single_item_v2.xml
+++ b/app/src/main/res/layout/fragment_last_entered_values_single_item_v2.xml
@@ -47,7 +47,7 @@
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@android:color/white"
+            android:background="@drawable/fragment_last_entered_values_single_item_style"
             android:id="@+id/fragment_last_entered_values_layout_with_text">
 
             <LinearLayout
@@ -70,7 +70,8 @@
                     android:textStyle="normal|bold"
                     android:layout_gravity="center_vertical"
                     android:layout_marginEnd="5dp"
-                    android:layout_marginRight="5dp" />
+                    android:layout_marginRight="5dp"
+                    android:textColor="@drawable/button_text_color_black" />
             </LinearLayout>
 
             <LinearLayout
@@ -106,7 +107,8 @@
                         android:layout_marginEnd="5sp"
                         android:layout_marginRight="5sp"
                         android:layout_marginLeft="5sp"
-                        android:layout_marginStart="5sp" />
+                        android:layout_marginStart="5sp"
+                        android:textColor="@drawable/button_text_color_black" />
                 </LinearLayout>
 
                 <LinearLayout
@@ -134,7 +136,8 @@
                         android:text="Note"
                         android:layout_gravity="center_vertical"
                         android:maxLines="1"
-                        android:ellipsize="end"/>
+                        android:ellipsize="end"
+                        android:textColor="@drawable/button_text_color_grey" />
                 </LinearLayout>
 
             </LinearLayout>
