--- a/app/src/main/res/layout/activity_statistic_detailed.xml
+++ b/app/src/main/res/layout/activity_statistic_detailed.xml
@@ -69,9 +69,6 @@
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
             android:background="@color/orange"
             android:paddingBottom="15dp"
             android:paddingTop="15dp"
@@ -124,7 +121,7 @@
                     android:orientation="vertical"
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
-                    android:background="@android:color/white"></LinearLayout>
+                    android:background="@android:color/white"/>
 
                 <TextView
                     android:text="45812 руб./день"
