--- a/app/src/main/res/layout/choose_period_dialog_v2.xml
+++ b/app/src/main/res/layout/choose_period_dialog_v2.xml
@@ -11,7 +11,7 @@
 
         <TextView
             android:text="Начальная дата"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:id="@+id/textView2"
             android:layout_weight="1"
@@ -153,7 +153,7 @@
 
         <TextView
             android:text="Конечная дата"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:id="@+id/textView4"
             android:layout_weight="1"
