--- a/app/src/main/res/layout/edit_dialog_fragment_view.xml
+++ b/app/src/main/res/layout/edit_dialog_fragment_view.xml
@@ -57,7 +57,7 @@
 
                 <TextView
                     android:text="TextView"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:id="@+id/fragment_last_entered_values_expenses_type_textview"
                     android:layout_weight="1"
@@ -77,7 +77,7 @@
                 android:layout_width="1dp"
                 android:layout_height="match_parent"
                 android:background="@color/lightGrey"
-                android:id="@+id/fragment_last_entered_values_vertical_separator"></LinearLayout>
+                android:id="@+id/fragment_last_entered_values_vertical_separator"/>
 
             <LinearLayout
                 android:orientation="vertical"
@@ -95,7 +95,7 @@
 
                     <TextView
                         android:text="TextView"
-                        android:layout_width="wrap_content"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:id="@+id/fragment_last_entered_values_expenses_value_textview"
                         android:layout_weight="1"
@@ -122,7 +122,7 @@
                     android:layout_weight="0.5">
 
                     <TextView
-                        android:layout_width="wrap_content"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:id="@+id/fragment_last_entered_values_expenses_note_textview"
                         android:layout_weight="1"
