--- a/app/src/main/res/layout/activity_main_with_fragments.xml
+++ b/app/src/main/res/layout/activity_main_with_fragments.xml
@@ -35,6 +35,19 @@
             android:layout_alignParentStart="true"
             android:layout_alignParentLeft="true"/>
 
+        <ImageView
+            app:srcCompat="@drawable/ic_backup_white_24dp"
+            android:id="@+id/activity_main_backup_data_imageview"
+            android:layout_gravity="end"
+            android:background="@drawable/activity_input_data_buttons_style"
+            android:clickable="true"
+            android:layout_marginLeft="10dp"
+            android:layout_marginStart="10dp"
+            android:layout_height="36dp"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_width="54dp" />
+
     </RelativeLayout>
 
     <android.support.design.widget.TabLayout
