--- a/app/src/main/res/layout/activity_backup_data.xml
+++ b/app/src/main/res/layout/activity_backup_data.xml
@@ -7,54 +7,52 @@
     android:layout_height="match_parent"
     android:keepScreenOn="true">
 
-    <RelativeLayout
+    <LinearLayout
+        android:id="@+id/backup_data_toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/backup_data_toolbar"
-        android:background="@color/orange">
+        android:background="@color/orange"
+        android:weightSum="8">
 
         <ImageView
+            android:id="@+id/backup_data_arrow_back_imageview"
             android:layout_width="54dp"
             android:layout_height="54dp"
-            app:srcCompat="@drawable/ic_arrow_back_white_36dp"
-            android:id="@+id/backup_data_arrow_back_imageview"
+            android:layout_weight="2"
             android:background="@drawable/activity_input_data_buttons_style"
-            android:clickable="true" />
+            android:clickable="true"
+            app:srcCompat="@drawable/ic_arrow_back_white_36dp" />
 
         <TextView
-            android:text="Резервное копирование"
+            android:id="@+id/backup_data_toolbar_text_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textAppearance="@style/TextAppearance.AppCompat"
-            android:textSize="20sp"
-            android:id="@+id/backup_data_toolbar_text_view"
-            android:paddingLeft="10dp"
-            android:paddingStart="10dp"
-            android:paddingRight="10dp"
-            android:paddingEnd="10dp"
-            android:maxLines="1"
-            android:ellipsize="end"
-            android:textColor="@android:color/white"
             android:layout_gravity="center"
+            android:layout_weight="4"
+            android:ellipsize="end"
             android:gravity="center"
-            android:layout_alignParentTop="true"
-            android:layout_alignBottom="@+id/backup_data_arrow_back_imageview"
-            android:layout_toLeftOf="@+id/backup_data_account_imageview"
-            android:layout_toRightOf="@+id/backup_data_arrow_back_imageview"
-            android:layout_toEndOf="@+id/backup_data_arrow_back_imageview" />
+            android:maxLines="2"
+            android:paddingEnd="10dp"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:paddingStart="10dp"
+            android:text="@string/backup_data_toolbar_text_view_string"
+            android:textAppearance="@style/TextAppearance.AppCompat"
+            android:textColor="@android:color/white"
+            android:textSize="20sp" />
 
         <ImageView
-            android:layout_height="54dp"
-            app:srcCompat="@drawable/ic_account_box_white_36dp"
             android:id="@+id/backup_data_account_imageview"
             android:layout_width="54dp"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true"
+            android:layout_height="54dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginStart="5dp"
+            android:layout_weight="2"
             android:background="@drawable/activity_input_data_buttons_style"
-            android:clickable="true" />
+            android:clickable="true"
+            app:srcCompat="@drawable/ic_account_box_white_36dp" />
 
-    </RelativeLayout>
+    </LinearLayout>
 
     <LinearLayout
         android:orientation="vertical"
@@ -65,14 +63,14 @@
         android:background="@color/orange" >
 
         <TextView
+            android:id="@+id/backup_data_status_textview"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:id="@+id/backup_data_status_textview"
+            android:gravity="center"
+            android:text="@string/backup_data_status_textview_string"
             android:textAppearance="@style/TextAppearance.AppCompat"
             android:textColor="@android:color/white"
-            android:textSize="18sp"
-            android:text="Status: none"
-            android:gravity="center" />
+            android:textSize="18sp" />
     </LinearLayout>
 
     <android.support.v7.widget.RecyclerView
@@ -103,11 +101,11 @@
         android:id="@+id/backup_data_buttons_layout">
 
         <Button
-            android:text="Создать резервную копию"
+            android:id="@+id/backup_data_backup_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/backup_data_backup_button"
             android:background="@drawable/keyboard_buttons_custom"
+            android:text="@string/backup_data_backup_button_string"
             android:textColor="@drawable/button_text_color_black" />
 
     </LinearLayout>
