--- a/app/src/main/res/layout/activity_input_data.xml
+++ b/app/src/main/res/layout/activity_input_data.xml
@@ -100,7 +100,7 @@
             android:background="@android:color/white">
 
             <TextView
-                android:text="руб."
+                android:text="@string/activity_input_data_currency_textview_string"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:id="@+id/activity_input_data_currency_textview"
@@ -181,7 +181,7 @@
                 android:id="@+id/activity_input_data_input_note_edittext"
                 android:textAppearance="@style/TextAppearance.AppCompat"
                 android:textSize="24sp"
-                android:hint="Заметка"
+                android:hint="@string/activity_input_data_input_note_edittext_hint_string"
                 android:background="@drawable/activity_input_data_edittext_style"
                 android:layout_weight="1"
                 android:textColorHint="#80FFFFFF"
@@ -400,7 +400,7 @@
                         android:textAllCaps="false" />
 
                     <Button
-                        android:text="Del"
+                        android:text="@string/activity_input_data_del_string"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:id="@+id/activity_input_data_del"
@@ -422,7 +422,7 @@
                 android:weightSum="3">
 
                 <Button
-                    android:text="OK"
+                    android:text="@string/activity_input_data_ok_string"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -465,7 +465,7 @@
             android:background="@color/deepOrange">
 
             <Button
-                android:text="Вчера"
+                android:text="@string/activity_input_data_date_yesterday_button_string"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/activity_input_data_date_yesterday_button"
@@ -476,7 +476,7 @@
                 android:textSize="16sp" />
 
             <Button
-                android:text="Сегодня"
+                android:text="@string/activity_input_data_date_today_button_string"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/activity_input_data_date_today_button"
@@ -487,7 +487,7 @@
                 android:textSize="16sp" />
 
             <Button
-                android:text="Дата"
+                android:text="@string/activity_input_data_choose_date_button_string"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/activity_input_data_choose_date_button"
