--- a/app/src/main/res/layout/activity_statistic_detailed.xml
+++ b/app/src/main/res/layout/activity_statistic_detailed.xml
@@ -26,7 +26,7 @@
             android:background="@drawable/activity_input_data_buttons_style" />
 
         <TextView
-            android:text="03.05.1989 - 03.05.2089"
+            android:text="@string/activity_statistic_detailed_toolbar_textview_string"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:textAppearance="@style/TextAppearance.AppCompat"
@@ -83,7 +83,7 @@
                 android:id="@+id/activity_statistic_detailed_overall_text_textview"
                 android:layout_weight="1"
                 android:gravity="right|center_vertical|end"
-                android:text="Всего"
+                android:text="@string/activity_statistic_detailed_overall_text_textview_string"
                 android:textColor="@android:color/white"
                 android:textSize="18sp"
                 android:layout_marginRight="10dp"
@@ -105,7 +105,7 @@
                 android:layout_marginStart="10dp">
 
                 <TextView
-                    android:text="25255 руб."
+                    android:text="@string/activity_statistic_detailed_overall_value_textview_string"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:id="@+id/activity_statistic_detailed_overall_value_textview"
@@ -124,7 +124,7 @@
                     android:background="@android:color/white"/>
 
                 <TextView
-                    android:text="45812 руб./день"
+                    android:text="@string/activity_statistic_detailed_per_day_textview_string"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:id="@+id/activity_statistic_detailed_per_day_textview"
