--- a/app/src/main/res/layout/datepicker.xml
+++ b/app/src/main/res/layout/datepicker.xml
@@ -178,7 +178,7 @@
         android:weightSum="2">
 
         <Button
-            android:text="@string/calendar_ok"
+            android:text="@string/datepicker_ok_button_string"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/calendar_ok"
@@ -194,7 +194,7 @@
             android:background="#FF9800"/>
 
         <Button
-            android:text="@string/calendar_cancel"
+            android:text="@string/datepicker_cancel_button_string"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/calendar_cancel"
