--- a/app/src/main/res/layout/fragment_current_month_screen.xml
+++ b/app/src/main/res/layout/fragment_current_month_screen.xml
@@ -32,10 +32,10 @@
         <TextView
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:id="@+id/curren_month_screen_month_textview"
+            android:id="@+id/current_month_screen_month_textview"
             android:layout_weight="1"
             android:gravity="right|center_vertical|end"
-            android:text="Всего за Январь" />
+            android:text="@string/current_month_screen_month_textview_string" />
 
         <ImageView
             android:layout_width="wrap_content"
@@ -50,7 +50,7 @@
             android:paddingBottom="2dp">
 
             <TextView
-                android:text="25255 руб."
+                android:text="@string/current_month_screen_overall_value_textview_string"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/current_month_screen_overall_value_textview"
