--- a/app/src/main/res/layout/fragment_last_entered_values_screen_single_item.xml
+++ b/app/src/main/res/layout/fragment_last_entered_values_screen_single_item.xml
@@ -38,106 +38,105 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="1dp"
         android:clickable="false"
         android:focusable="false"
-        android:background="@drawable/fragment_last_entered_values_single_item_border">
+        android:padding="1dp">
 
         <LinearLayout
-            android:orientation="horizontal"
+            android:id="@+id/fragment_last_entered_values_layout_with_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/fragment_last_entered_values_single_item_style"
-            android:id="@+id/fragment_last_entered_values_layout_with_text">
+            android:orientation="horizontal">
 
             <LinearLayout
-                android:orientation="horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_weight="1">
+                android:layout_weight="1"
+                android:orientation="horizontal">
 
                 <TextView
-                    android:text="TextView"
+                    android:id="@+id/fragment_last_entered_values_expenses_type_textview"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/fragment_last_entered_values_expenses_type_textview"
-                    android:layout_weight="1"
-                    android:textAppearance="@style/TextAppearance.AppCompat"
-                    android:textSize="20sp"
-                    android:layout_marginLeft="5dp"
-                    android:layout_marginStart="5dp"
-                    android:gravity="left|start"
-                    android:textStyle="normal|bold"
                     android:layout_gravity="center_vertical"
                     android:layout_marginEnd="5dp"
+                    android:layout_marginLeft="5dp"
                     android:layout_marginRight="5dp"
-                    android:textColor="@drawable/button_text_color_black" />
+                    android:layout_marginStart="5dp"
+                    android:layout_weight="1"
+                    android:gravity="left|start"
+                    android:text="TextView"
+                    android:textAppearance="@style/TextAppearance.AppCompat"
+                    android:textColor="@drawable/button_text_color_black"
+                    android:textSize="20sp"
+                    android:textStyle="normal|bold" />
             </LinearLayout>
 
             <LinearLayout
-                android:orientation="vertical"
+                android:id="@+id/fragment_last_entered_values_vertical_separator"
                 android:layout_width="1dp"
                 android:layout_height="match_parent"
                 android:background="@color/lightGrey"
-                android:id="@+id/fragment_last_entered_values_vertical_separator"></LinearLayout>
+                android:orientation="vertical"></LinearLayout>
 
             <LinearLayout
-                android:orientation="vertical"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:paddingTop="10dp"
-                android:paddingBottom="10dp">
+                android:orientation="vertical"
+                android:paddingBottom="10dp"
+                android:paddingTop="10dp">
 
                 <LinearLayout
-                    android:orientation="horizontal"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_weight="0.5">
+                    android:layout_weight="0.5"
+                    android:orientation="horizontal">
 
                     <TextView
-                        android:text="TextView"
+                        android:id="@+id/fragment_last_entered_values_expenses_value_textview"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:id="@+id/fragment_last_entered_values_expenses_value_textview"
-                        android:layout_weight="1"
-                        android:textAppearance="@style/TextAppearance.AppCompat"
-                        android:textSize="20sp"
-                        android:gravity="right|end"
                         android:layout_marginEnd="5sp"
-                        android:layout_marginRight="5sp"
                         android:layout_marginLeft="5sp"
+                        android:layout_marginRight="5sp"
                         android:layout_marginStart="5sp"
-                        android:textColor="@drawable/button_text_color_black" />
+                        android:layout_weight="1"
+                        android:gravity="right|end"
+                        android:text="TextView"
+                        android:textAppearance="@style/TextAppearance.AppCompat"
+                        android:textColor="@drawable/button_text_color_black"
+                        android:textSize="20sp" />
                 </LinearLayout>
 
                 <LinearLayout
-                    android:orientation="vertical"
+                    android:id="@+id/fragment_last_entered_values_layout_horizontal_note_separator"
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
                     android:background="@color/lightGrey"
-                    android:id="@+id/fragment_last_entered_values_layout_horizontal_note_separator"/>
+                    android:orientation="vertical" />
 
                 <LinearLayout
-                    android:orientation="horizontal"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_weight="0.5">
+                    android:layout_weight="0.5"
+                    android:orientation="horizontal">
 
                     <TextView
+                        android:id="@+id/fragment_last_entered_values_expenses_note_textview"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:id="@+id/fragment_last_entered_values_expenses_note_textview"
-                        android:layout_weight="1"
-                        android:gravity="right|end"
-                        android:layout_marginRight="5sp"
-                        android:layout_marginEnd="5sp"
-                        android:textSize="18sp"
-                        android:text="Note"
                         android:layout_gravity="center_vertical"
-                        android:maxLines="1"
+                        android:layout_marginEnd="5sp"
+                        android:layout_marginRight="5sp"
+                        android:layout_weight="1"
                         android:ellipsize="end"
-                        android:textColor="@drawable/button_text_color_grey" />
+                        android:gravity="right|end"
+                        android:maxLines="1"
+                        android:text="Note"
+                        android:textColor="@drawable/button_text_color_grey"
+                        android:textSize="18sp" />
                 </LinearLayout>
 
             </LinearLayout>
